Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.



~~~~~~~~~~~~0.0.1 Revitalize 10-09-2022 xx.xx P.M~~~~~~~~~~~~~~
+AutomaticFarmingSystems can now harvest from ResourceBushes.
~Finished migrating all objects to use their display strings in the .json files in the ModAssets/Strings/Objects folder and sub folder.
+Added in Coal Resource Bushes.
+Dwarf now sells all resource bushes. 25% chance for coal and copper, 20% for iron and gold, 15% for Iridium, and 10% for Radioactive.

~~~~~~~~~~~~0.0.1 Revitalize 10-08-2022 xx.xx P.M~~~~~~~~~~~~~~
+Cleaned up some code regarding save data for shops.
+Added some documentation for how to add new mail for the mod.
+Made ELectricFurnace blueprints guarded by when the Player obtains their first battery pack (or any battery pack).
+Added in mail for when ElectricFurnace blueprints are available for sale.

~~~~~~~~~~~~0.0.1 Revitalize 10-06-2022 xx.xx P.M~~~~~~~~~~~~~~
~Changed from hardcoading strings form display names and item descriptions to loading them all from json files instead. [WIP]

~~~~~~~~~~~~0.0.1 Revitalize 9-28-2022 xx.xx P.M~~~~~~~~~~~~~~
~Rewrote a lot of the ElectricFurnace code when it comes to processing items.
+Electric, Nuclear, and Magical furnaces now load their recipes from .json files. Only allow for a single input and output item, but allows flexibility for new recipes or modifying them.
~Cleaned up code related to ElectricFurnace Automate compatibility mod!

~~~~~~~~~~~~0.0.1 Revitalize 9-27-2022 xx.xx P.M~~~~~~~~~~~~~~
~Cleaned up lots of code in Robin's Shop Utils to make it easier to add new items to Robin's shop.
+Added blueprints for Nuclear Furnace.
+Added blueprints for Magical Furnace.
~Automatic Farming System should now render properly on Blueprints.
+Added an error message that occurs when attempting to get an invalid item from the ObjectManager.

~~~~~~~~~~~~0.0.1 Revitalize 7-25-2022 xx.xx P.M~~~~~~~~~~~~~~