@@ -1,0 +1,6 @@
+{
+	"NeedBatteryPack":"Needs a battery pack to operate!",
+	"NeedNuclearFuel":"Needs nuclear fuel to operate!",
+	"MagicalFurnaceFuelError":"Magical furnace failure! Please contact Omegasis to address this issue!",
+	"NeedMoreInputItems":"Requires {0} {1}!"
+}
