@@ -3,7 +3,9 @@ Key:
 ~ Changed Content/Feature or Bugfix.
 - Removed Content/Feature.
 
-
+~~~~~~~~~~~~0.0.1 Revitalize 10-11-2022 xx.xx P.M~~~~~~~~~~~~~~
+~ Moved hard coded strings from ElectricFurnace.cs to separate .json files.
+~ Fixed a bug where smelting an object with not enough fuel would not consume the input and give the smelted object for free.
 
 ~~~~~~~~~~~~0.0.1 Revitalize 10-09-2022 xx.xx P.M~~~~~~~~~~~~~~
 +AutomaticFarmingSystems can now harvest from ResourceBushes.
